--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">MobileWeatherApp</string>
-    <string name="appwidget_text">EXAMPLE</string>
-    <string name="add_widget">Add widget</string>
-    <string name="app_widget_description">This is an app widget description</string>
+    <string name="text_place">Địa điểm</string>
+    <string name="text_temperature">25°C</string>
+    <string name="text_humidity">80%</string>
+    <string name="time">%1$s</string>
 </resources>
