--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">MobileWeatherApp</string>
-    <string name="text_place">Địa điểm</string>
-    <string name="text_temperature">25°C</string>
-    <string name="text_humidity">80%</string>
+    <string name="text_place">Hà Nội</string>
+    <string name="text_temperature">%s</string>
+    <string name="text_humidity">%s</string>
     <string name="time">%1$s</string>
 </resources>
